--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  <div id="root"></div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="shortcut icon"
+      href="https://media.licdn.com/dms/image/C4D0BAQE_-Xows6lXJg/company-logo_200_200/0/1559203765748?e=2147483647&v=beta&t=aGZ3DWgi0f5NGFqjyekxFNITH0-JjJJqtSZ1IZNXSKA"
+      type="image/x-icon"
+    />
+    <title>Makers rooms</title>
+  </head>
+  <body>
+    <div id="root"></div>
+  </body>
 </html>
